# CPP_Projects

./: CMakeLists.txt  README.md  conway.cpp  main.cpp
conway/: conway.cpp
conways/: class.cpp  class.h  main.cpp  rules.txt
conways-game-sfml/: rules.txt
conways-sdl/: class.h  main.cpp
conways-sfml/: CMakeLists.txt  main.cpp
langtons-ant/: main.cpp
langtons-ant-sdl/: class.cpp  class.h  main.cpp  rules.txt
langtons-ant-sfml/: class.cpp  class.h  main.cpp
sfml/: placeholder  shader.frag  shapes.cpp  shapes.hpp  window.cpp
